<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F3F3F3"
    tools:context=".ActivityPressure">

    <Button
        android:id="@+id/bt_pressureBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="160dp"
        android:background="#E0E0FF"
        android:text="@string/string_back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_savePressure" />

    <Button
        android:id="@+id/bt_savePressure"
        android:layout_width="88dp"
        android:layout_height="48dp"
        android:layout_marginStart="160dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="160dp"
        android:layout_marginBottom="20dp"
        android:background="#E0E0FF"
        android:text="@string/string_saveMain"
        app:layout_constraintBottom_toTopOf="@+id/bt_pressureBack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.56"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ch_tah" />

    <TextView
        android:id="@+id/tv_timeZ"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="40dp"
        android:text="@string/string_timeZ"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_time"
        app:layout_constraintTop_toBottomOf="@+id/tv_dateZ" />

    <TextView
        android:id="@+id/tv_dateZ"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="18dp"
        android:text="@string/string_dateZ"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_pUp"
        app:layout_constraintTop_toBottomOf="@+id/tv_pulseZ" />

    <TextView
        android:id="@+id/tv_pDpZ2"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="17dp"
        android:text="@string/string_pressureZ"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_pUp"
        app:layout_constraintTop_toBottomOf="@+id/tv_pUpZ" />

    <TextView
        android:id="@+id/tv_pulseZ"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="21dp"
        android:text="@string/string_pulseZ"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_pUp"
        app:layout_constraintTop_toBottomOf="@+id/tv_pDpZ2" />

    <EditText
        android:id="@+id/tv_time"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="15dp"
        android:background="#FAFAFF"
        android:ems="10"
        android:hint="@string/string_time"
        android:importantForAutofill="no"
        android:inputType="time"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_date" />

    <EditText
        android:id="@+id/tv_date"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="15dp"
        android:background="#FAFAFF"
        android:ems="10"
        android:hint="@string/string_data"
        android:importantForAutofill="no"
        android:inputType="date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_pulse" />

    <EditText
        android:id="@+id/tv_pulse"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="15dp"
        android:background="#FAFAFF"
        android:ems="10"
        android:hint="@string/string_pulse"
        android:importantForAutofill="no"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_pDown" />

    <EditText
        android:id="@+id/tv_pDown"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="15dp"
        android:background="#FAFAFF"
        android:ems="10"
        android:hint="@string/string_pUp"
        android:importantForAutofill="no"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_pUp" />

    <EditText
        android:id="@+id/tv_pUp"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="20dp"
        android:background="#FAFAFF"
        android:ems="10"
        android:hint="@string/string_pDw"
        android:importantForAutofill="no"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_input" />

    <TextView
        android:id="@+id/tv_input"
        android:layout_width="367dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="10dp"
        android:text="@string/string_input"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.58"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_pressure" />

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="169dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="170dp"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/iv_logo"
        app:layout_constraintBottom_toTopOf="@+id/tv_programm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/sym_def_app_icon" />

    <TextView
        android:id="@+id/tv_pressure"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:text="@string/string_liveName"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_logo" />

    <TextView
        android:id="@+id/tv_pUpZ"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="17dp"
        android:text="@string/string_pressureZ"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_pUp"
        app:layout_constraintTop_toBottomOf="@+id/tv_input" />

    <CheckBox
        android:id="@+id/ch_tah"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:text="@string/string_tah"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_time" />

</androidx.constraintlayout.widget.ConstraintLayout>