<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F3F3F3"
    tools:context=".ActivityLife">

    <TextView
        android:id="@+id/tv_step"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="17dp"
        android:text="@string/string_step"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintStart_toEndOf="@+id/tv_weight"
        app:layout_constraintTop_toBottomOf="@+id/tv_kg" />

    <Button
        android:id="@+id/bt_saveLife"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="160dp"
        android:background="#E0E0FF"
        android:text="@string/string_saveMain"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_steps" />

    <Button
        android:id="@+id/bt_lifeBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginEnd="160dp"
        android:layout_marginBottom="75dp"
        android:background="#E0E0FF"
        android:text="@string/string_back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/tv_steps"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="15dp"
        android:background="#FAFAFF"
        android:ems="10"
        android:hint="@string/string_steps"
        android:importantForAutofill="no"
        android:inputType="numberSigned"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_weight" />

    <EditText
        android:id="@+id/tv_weight"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="50dp"
        android:background="#FAFAFF"
        android:ems="10"
        android:hint="@string/string_weight"
        android:importantForAutofill="no"
        android:inputType="numberSigned"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_input" />

    <TextView
        android:id="@+id/tv_input"
        android:layout_width="367dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="230dp"
        android:layout_marginEnd="10dp"
        android:text="@string/string_input"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.58"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_life"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:text="@string/string_liveName"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_logo" />

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="169dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="170dp"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/iv_logo"
        app:layout_constraintBottom_toTopOf="@+id/tv_programm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/sym_def_app_icon" />

    <TextView
        android:id="@+id/tv_kg"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="17dp"
        android:text="@string/string_kg"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_weight"
        app:layout_constraintTop_toBottomOf="@+id/tv_input" />

</androidx.constraintlayout.widget.ConstraintLayout>