<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F3F3F3"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/bt_activityLife"
        android:layout_width="134dp"
        android:layout_height="125dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="62dp"
        android:layout_marginEnd="23dp"
        android:layout_marginBottom="40dp"
        android:background="#E0E0FF"
        android:text="@string/string_bt_activityLife"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/bt_activityPr"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_saveMain" />

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="169dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="170dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@+id/tv_programm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/sym_def_app_icon"
        android:contentDescription="@string/iv_logo" />

    <TextView
        android:id="@+id/tv_programm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:text="@string/string_name"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_logo" />

    <TextView
        android:id="@+id/tv_author"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/string_author"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="italic"
        app:layout_constraintTop_toBottomOf="@+id/tv_programm"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/tv_input"
        android:layout_width="367dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="230dp"
        android:layout_marginEnd="10dp"
        android:text="@string/string_input"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.58"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/tv_nameUser"
        android:layout_width="250dp"
        android:layout_height="30dp"
        android:layout_marginStart="90dp"
        android:layout_marginTop="50dp"
        android:background="#FAFAFF"
        android:ems="10"
        android:hint="@string/string_nameUser"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_input" />

    <EditText
        android:id="@+id/tv_ageUser"
        android:layout_width="250dp"
        android:layout_height="30dp"
        android:layout_marginStart="90dp"
        android:layout_marginTop="15dp"
        android:background="#FAFAFF"
        android:ems="10"
        android:hint="@string/string_ageNumber"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_nameUser" />

    <Button
        android:id="@+id/bt_saveMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="160dp"
        android:background="#E0E0FF"
        android:text="@string/string_saveMain"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_ageUser" />

    <Button
        android:id="@+id/bt_activityPr"
        android:layout_width="134dp"
        android:layout_height="125dp"
        android:layout_marginStart="23dp"
        android:layout_marginTop="62dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="40dp"
        android:background="#E0E0FF"
        android:text="@string/string_bt_activityPr"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/bt_activityLife"
        app:layout_constraintTop_toBottomOf="@+id/bt_saveMain" />

</androidx.constraintlayout.widget.ConstraintLayout>